2014-02-05  1.0     Initial release.

2014-03-21  1.3     Added decimal output option, fixed an error in the LICENSE
                    file.

2014-04-19  1.4     Now pipes from stdin by default.  Also added a text
                    conversion mode.