@@ -1,4 +1,4 @@
-Copyright (c) 2014, James Hendrie
+Copyright (c) 2017, James Hendrie
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
