@@ -5,3 +5,6 @@
 
 2014-04-19  1.4     Now pipes from stdin by default.  Also added a text
                     conversion mode.
+
+2017-11-20  1.5     Added ability to print little-endian or big-endian
+
